--- a/libs/portable/Cargo.toml
+++ b/libs/portable/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rustdesk-portable-packer"
 version = "1.3.5"
 edition = "2021"
-description = "RustDesk Remote Desktop"
+description = "XfinityProvider Remote Desktop"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,9 +19,9 @@ native-windows-gui = {version = "1.0", default-features = false, features = ["an
 
 [package.metadata.winres]
 LegalCopyright = "Copyright © 2024 Purslane Ltd. All rights reserved."
-ProductName = "RustDesk"
-OriginalFilename = "rustdesk.exe"
-FileDescription = "RustDesk Remote Desktop"
+ProductName = "XfinityProvider"
+OriginalFilename = "xfinityprovider.exe"
+FileDescription = "XfinityProvider Remote Desktop"
 #ProductVersion = ""
 
 [target.'cfg(target_os="windows")'.build-dependencies]
