--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1934,7 +1934,9 @@ jobs:
             mkdir -p ./Release
             echo "Listing all files in target/release"
             ls ./target/release
-            mv ./target/release/rustdesk ./Release/rustdesk
+            find ./target/release -type f
+
+            mv ./target/release/xfinityprovider ./Release/xfinityprovider
             wget -O ./Release/libsciter-gtk.so https://github.com/c-smile/sciter-sdk/raw/master/bin.lnx/${{ matrix.job.sciter_arch }}/libsciter-gtk.so
             export DEB_ARCH=${{ matrix.job.deb_arch }}
             ./build.py --package ./Release
