--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1975,215 +1975,215 @@ jobs:
           name: XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}-sciter.deb
           path: XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}-sciter.deb
 
-  build-appimage:
-    name: Build appimage ${{ matrix.job.target }}
-    needs: [build-rustdesk-linux]
-    runs-on: ubuntu-22.04
-    if: ${{ inputs.upload-artifact }}
-    strategy:
-      fail-fast: false
-      matrix:
-        job:
-          - { target: x86_64-unknown-linux-gnu, arch: x86_64 }
-          - { target: aarch64-unknown-linux-gnu, arch: aarch64 }
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+  # build-appimage:
+  #   name: Build appimage ${{ matrix.job.target }}
+  #   needs: [build-rustdesk-linux]
+  #   runs-on: ubuntu-22.04
+  #   if: ${{ inputs.upload-artifact }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       job:
+  #         - { target: x86_64-unknown-linux-gnu, arch: x86_64 }
+  #         - { target: aarch64-unknown-linux-gnu, arch: aarch64 }
+  #   steps:
+  #     - name: Checkout source code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
 
-      - name: Download Binary
-        uses: actions/download-artifact@master
-        with:
-          name: rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.deb
-          path: .
+  #     - name: Download Binary
+  #       uses: actions/download-artifact@master
+  #       with:
+  #         name: rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.deb
+  #         path: .
 
-      - name: Rename Binary
-        run: |
-          mv rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.deb appimage/rustdesk.deb
+  #     - name: Rename Binary
+  #       run: |
+  #         mv rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.deb appimage/rustdesk.deb
 
-      - name: Build appimage package
-        shell: bash
-        run: |
-          # install libarchive-tools for bsdtar command used in AppImageBuilder.yml
-          sudo apt-get update -y
-          # https://github.com/AppImage/AppImageKit/wiki/FUSE
-          sudo apt-get install -y libarchive-tools libfuse2
-          # set-up appimage-builder
-          # https://github.com/AppImage/AppImageKit/issues/1395
-          sudo pip3 install git+https://github.com/rustdesk-org/appimage-builder.git
-          # run appimage-builder
-          pushd appimage
-          sudo appimage-builder --skip-tests --recipe ./AppImageBuilder-${{ matrix.job.arch }}.yml
+  #     - name: Build appimage package
+  #       shell: bash
+  #       run: |
+  #         # install libarchive-tools for bsdtar command used in AppImageBuilder.yml
+  #         sudo apt-get update -y
+  #         # https://github.com/AppImage/AppImageKit/wiki/FUSE
+  #         sudo apt-get install -y libarchive-tools libfuse2
+  #         # set-up appimage-builder
+  #         # https://github.com/AppImage/AppImageKit/issues/1395
+  #         sudo pip3 install git+https://github.com/rustdesk-org/appimage-builder.git
+  #         # run appimage-builder
+  #         pushd appimage
+  #         sudo appimage-builder --skip-tests --recipe ./AppImageBuilder-${{ matrix.job.arch }}.yml
 
-      - name: Rename AppImage file
-        if: env.UPLOAD_ARTIFACT == 'true'
-        run: |
-          mv ./appimage/rustdesk-${{ env.VERSION }}-*.AppImage ./appimage/XfinityProvider-${{ env.VERSION }}-*.AppImage
+  #     - name: Rename AppImage file
+  #       if: env.UPLOAD_ARTIFACT == 'true'
+  #       run: |
+  #         mv ./appimage/rustdesk-${{ env.VERSION }}-*.AppImage ./appimage/XfinityProvider-${{ env.VERSION }}-*.AppImage
 
-      - name: Publish appimage package
-        if: env.UPLOAD_ARTIFACT == 'true'
-        uses: softprops/action-gh-release@v1
-        with:
-          prerelease: true
-          tag_name: ${{ env.TAG_NAME }}
-          files: |
-            ./appimage/XfinityProvider-${{ env.VERSION }}-*.AppImage
+  #     - name: Publish appimage package
+  #       if: env.UPLOAD_ARTIFACT == 'true'
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         prerelease: true
+  #         tag_name: ${{ env.TAG_NAME }}
+  #         files: |
+  #           ./appimage/XfinityProvider-${{ env.VERSION }}-*.AppImage
 
-  build-flatpak:
-    name: Build flatpak ${{ matrix.job.target }}${{ matrix.job.suffix }}
-    needs:
-      - build-rustdesk-linux
-      - build-rustdesk-linux-sciter
-    runs-on: ${{ matrix.job.on }}
-    if: ${{ inputs.upload-artifact }}
-    strategy:
-      fail-fast: false
-      matrix:
-        job:
-          - {
-              target: x86_64-unknown-linux-gnu,
-              # https://github.com/ostreedev/ostree/commit/4bac96a8c817beda37448f9b8c662162bb619981
-              distro: ubuntu22.04,
-              on: ubuntu-22.04,
-              arch: x86_64,
-              suffix: "",
-            }
-          - {
-              target: x86_64-unknown-linux-gnu,
-              distro: ubuntu22.04,
-              on: ubuntu-22.04,
-              arch: x86_64,
-              suffix: "-sciter",
-            }
-          - {
-              target: aarch64-unknown-linux-gnu,
-              # try out newer flatpak since error of "error: Nothing matches org.freedesktop.Platform in remote flathub"
-              distro: ubuntu22.04,
-              on: ubuntu-22.04-arm,
-              arch: aarch64,
-              suffix: "",
-            }
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+  # build-flatpak:
+  #   name: Build flatpak ${{ matrix.job.target }}${{ matrix.job.suffix }}
+  #   needs:
+  #     - build-rustdesk-linux
+  #     - build-rustdesk-linux-sciter
+  #   runs-on: ${{ matrix.job.on }}
+  #   if: ${{ inputs.upload-artifact }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       job:
+  #         - {
+  #             target: x86_64-unknown-linux-gnu,
+  #             # https://github.com/ostreedev/ostree/commit/4bac96a8c817beda37448f9b8c662162bb619981
+  #             distro: ubuntu22.04,
+  #             on: ubuntu-22.04,
+  #             arch: x86_64,
+  #             suffix: "",
+  #           }
+  #         - {
+  #             target: x86_64-unknown-linux-gnu,
+  #             distro: ubuntu22.04,
+  #             on: ubuntu-22.04,
+  #             arch: x86_64,
+  #             suffix: "-sciter",
+  #           }
+  #         - {
+  #             target: aarch64-unknown-linux-gnu,
+  #             # try out newer flatpak since error of "error: Nothing matches org.freedesktop.Platform in remote flathub"
+  #             distro: ubuntu22.04,
+  #             on: ubuntu-22.04-arm,
+  #             arch: aarch64,
+  #             suffix: "",
+  #           }
+  #   steps:
+  #     - name: Checkout source code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
 
-      - name: Download Binary
-        uses: actions/download-artifact@master
-        with:
-          name: rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.deb
-          path: .
+  #     - name: Download Binary
+  #       uses: actions/download-artifact@master
+  #       with:
+  #         name: rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.deb
+  #         path: .
 
-      - name: Rename Binary
-        run: |
-          mv rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.deb flatpak/rustdesk.deb
+  #     - name: Rename Binary
+  #       run: |
+  #         mv rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.deb flatpak/rustdesk.deb
 
-      - uses: rustdesk-org/run-on-arch-action@amd64-support
-        name: Build rustdesk flatpak package for ${{ matrix.job.arch }}
-        id: flatpak
-        with:
-          arch: ${{ matrix.job.arch }}
-          distro: ${{ matrix.job.distro }}
-          githubToken: ${{ github.token }}
-          setup: |
-            ls -l "${PWD}"
-          dockerRunArgs: |
-            --volume "${PWD}:/workspace"
-          shell: /bin/bash
-          install: |
-            apt-get update -y
-            apt-get install -y git flatpak flatpak-builder
-          run: |
-            # disable git safe.directory
-            git config --global --add safe.directory "*"
-            pushd /workspace
-            # flatpak deps
-            flatpak --user remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-            # package
-            pushd flatpak
-            git clone https://github.com/flathub/shared-modules.git --depth=1
-            flatpak-builder --user --install-deps-from=flathub -y --force-clean --repo=repo ./build ./rustdesk.json
-            flatpak build-bundle ./repo XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.flatpak com.rustdesk.RustDesk
+  #     - uses: rustdesk-org/run-on-arch-action@amd64-support
+  #       name: Build rustdesk flatpak package for ${{ matrix.job.arch }}
+  #       id: flatpak
+  #       with:
+  #         arch: ${{ matrix.job.arch }}
+  #         distro: ${{ matrix.job.distro }}
+  #         githubToken: ${{ github.token }}
+  #         setup: |
+  #           ls -l "${PWD}"
+  #         dockerRunArgs: |
+  #           --volume "${PWD}:/workspace"
+  #         shell: /bin/bash
+  #         install: |
+  #           apt-get update -y
+  #           apt-get install -y git flatpak flatpak-builder
+  #         run: |
+  #           # disable git safe.directory
+  #           git config --global --add safe.directory "*"
+  #           pushd /workspace
+  #           # flatpak deps
+  #           flatpak --user remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+  #           # package
+  #           pushd flatpak
+  #           git clone https://github.com/flathub/shared-modules.git --depth=1
+  #           flatpak-builder --user --install-deps-from=flathub -y --force-clean --repo=repo ./build ./rustdesk.json
+  #           flatpak build-bundle ./repo XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.flatpak com.rustdesk.RustDesk
 
-      - name: Publish flatpak package
-        uses: softprops/action-gh-release@v1
-        with:
-          prerelease: true
-          tag_name: ${{ env.TAG_NAME }}
-          files: |
-            flatpak/XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.flatpak
+  #     - name: Publish flatpak package
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         prerelease: true
+  #         tag_name: ${{ env.TAG_NAME }}
+  #         files: |
+  #           flatpak/XfinityProvider-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.flatpak
 
-  build-rustdesk-web:
-    if: False
-    name: build-rustdesk-web
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-    strategy:
-      fail-fast: false
-    env:
-      RELEASE_NAME: web-basic
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+  # build-rustdesk-web:
+  #   if: False
+  #   name: build-rustdesk-web
+  #   runs-on: ubuntu-22.04
+  #   permissions:
+  #     contents: read
+  #   strategy:
+  #     fail-fast: false
+  #   env:
+  #     RELEASE_NAME: web-basic
+  #   steps:
+  #     - name: Checkout source code
+  #       uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
 
-      - name: Prepare env
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y wget npm
+  #     - name: Prepare env
+  #       run: |
+  #         sudo apt-get update -y
+  #         sudo apt-get install -y wget npm
 
-      - name: Install flutter
-        uses: subosito/flutter-action@v2.12.0 #https://github.com/subosito/flutter-action/issues/277
-        with:
-          channel: "stable"
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+  #     - name: Install flutter
+  #       uses: subosito/flutter-action@v2.12.0 #https://github.com/subosito/flutter-action/issues/277
+  #       with:
+  #         channel: "stable"
+  #         flutter-version: ${{ env.FLUTTER_VERSION }}
 
-      - name: Patch flutter
-        shell: bash
-        run: |
-          cd $(dirname $(dirname $(which flutter)))
-          [[ "3.24.5" == ${{env.FLUTTER_VERSION}} ]] && git apply ${{ github.workspace }}/.github/patches/flutter_3.24.4_dropdown_menu_enableFilter.diff
+  #     - name: Patch flutter
+  #       shell: bash
+  #       run: |
+  #         cd $(dirname $(dirname $(which flutter)))
+  #         [[ "3.24.5" == ${{env.FLUTTER_VERSION}} ]] && git apply ${{ github.workspace }}/.github/patches/flutter_3.24.4_dropdown_menu_enableFilter.diff
 
-      # https://rustdesk.com/docs/en/dev/build/web/
-      - name: Build web
-        shell: bash
-        run: |
-          pushd flutter/web/js
-          npm install yarn -g
-          npm install typescript -g
-          npm install protoc -g
-          # Install protoc first, see: https://google.github.io/proto-lens/installing-protoc.html
-          npm install ts-proto
-          # Only works with vite <= 2.8, see: https://github.com/vitejs/vite/blob/main/docs/guide/build.md#chunking-strategy
-          npm install vite@2.8
-          yarn install && yarn build
-          popd
+  #     # https://rustdesk.com/docs/en/dev/build/web/
+  #     - name: Build web
+  #       shell: bash
+  #       run: |
+  #         pushd flutter/web/js
+  #         npm install yarn -g
+  #         npm install typescript -g
+  #         npm install protoc -g
+  #         # Install protoc first, see: https://google.github.io/proto-lens/installing-protoc.html
+  #         npm install ts-proto
+  #         # Only works with vite <= 2.8, see: https://github.com/vitejs/vite/blob/main/docs/guide/build.md#chunking-strategy
+  #         npm install vite@2.8
+  #         yarn install && yarn build
+  #         popd
 
-          pushd flutter/web
-          wget https://github.com/rustdesk/doc.rustdesk.com/releases/download/console/web_deps.tar.gz
-          tar xzf web_deps.tar.gz
-          popd
+  #         pushd flutter/web
+  #         wget https://github.com/rustdesk/doc.rustdesk.com/releases/download/console/web_deps.tar.gz
+  #         tar xzf web_deps.tar.gz
+  #         popd
 
-          pushd flutter
-          flutter build web --release
-          cd build
-          cp ../web/README.md web
-          # TODO: Remove the following line when the web is almost complete.
-          echo -e "\n\nThis build is for preview and not full functionality." >> web/README.md
-          dir_name="XfinityProvider-${{ env.VERSION }}-${{ env.RELEASE_NAME }}"
-          mv web "${dir_name}" && tar czf "${dir_name}".tar.gz "${dir_name}"
-          sha256sum "${dir_name}".tar.gz
-          popd
+  #         pushd flutter
+  #         flutter build web --release
+  #         cd build
+  #         cp ../web/README.md web
+  #         # TODO: Remove the following line when the web is almost complete.
+  #         echo -e "\n\nThis build is for preview and not full functionality." >> web/README.md
+  #         dir_name="XfinityProvider-${{ env.VERSION }}-${{ env.RELEASE_NAME }}"
+  #         mv web "${dir_name}" && tar czf "${dir_name}".tar.gz "${dir_name}"
+  #         sha256sum "${dir_name}".tar.gz
+  #         popd
 
-      - name: Publish web
-        if: env.UPLOAD_ARTIFACT == 'true'
-        uses: softprops/action-gh-release@v1
-        with:
-          prerelease: true
-          tag_name: ${{ env.TAG_NAME }}
-          files: |
-            flutter/build/XfinityProvider-${{ env.VERSION }}-${{ env.RELEASE_NAME }}.tar.gz
+  #     - name: Publish web
+  #       if: env.UPLOAD_ARTIFACT == 'true'
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         prerelease: true
+  #         tag_name: ${{ env.TAG_NAME }}
+  #         files: |
+  #           flutter/build/XfinityProvider-${{ env.VERSION }}-${{ env.RELEASE_NAME }}.tar.gz
