--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -47,8 +47,8 @@ env:
   SIGN_BASE_URL: "${{ secrets.SIGN_BASE_URL }}"
 
 jobs:
-  generate-bridge:
-    uses: ./.github/workflows/bridge.yml
+  # generate-bridge:
+  #   uses: ./.github/workflows/bridge.yml
 
   # build-RustDeskTempTopMostWindow:
   #   uses: ./.github/workflows/third-party-RustDeskTempTopMostWindow.yml
