--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -2011,7 +2011,7 @@ jobs:
 
           for file in ./appimage/rustdesk-${{ env.VERSION }}-*.AppImage; do
             newname=$(echo "$file" | sed "s|rustdesk|XfinityProvider|")
-            mv "$file" "$newname"
+            sudo mv "$file" "$newname"
           done
 
           echo "After Rename..."
