--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -1758,16 +1758,16 @@ jobs:
               vcpkg-triplet: x64-linux,
               extra_features: ",hwcodec,unix-file-copy-paste",
             }
-          # - {
-          #     arch: armv7,
-          #     target: armv7-unknown-linux-gnueabihf,
-          #     on: ubuntu-22.04-arm,
-          #     distro: ubuntu18.04-rustdesk,
-          #     deb_arch: armhf,
-          #     sciter_arch: arm32,
-          #     vcpkg-triplet: arm-linux,
-          #     extra_features: ",unix-file-copy-paste",
-          #   }
+          - {
+              arch: armv7,
+              target: armv7-unknown-linux-gnueabihf,
+              on: ubuntu-22.04-arm,
+              distro: ubuntu18.04-rustdesk,
+              deb_arch: armhf,
+              sciter_arch: arm32,
+              vcpkg-triplet: arm-linux,
+              extra_features: ",unix-file-copy-paste",
+            }
     steps:
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
