--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -239,7 +239,7 @@ jobs:
         run: |
           ls -a 
           echo "Listing ./xfinity"
-          find ./rustdesk -type f
+          find ./xfinity -type f
 
 
       - name: Sign rustdesk files
@@ -260,7 +260,7 @@ jobs:
         run: |
           ls -a 
           echo "Listing ./xfinity"
-          find ./rustdesk -type f
+          find ./xfinity -type f
 
 
       # - name: Sign rustdesk files
